--- a/lib/global.css
+++ b/lib/global.css
@@ -29,6 +29,8 @@ input[type='number']::-webkit-outer-spin-button {
 
 @layer base {
   :root {
+    --text-color: #09090b;
+    --hover-color: #f4f4f5;
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
@@ -64,6 +66,8 @@ input[type='number']::-webkit-outer-spin-button {
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
+    --text-color: #fafafa;
+    --hover-color: #4a5565;
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
